First part of a huge refactoring involving the new versions of the libraries and new best practices