@@ -11,12 +11,11 @@ import com.googlecode.flickrjandroid.util.StringUtilities;
 
 import java.util.Date;
 import java.util.List;
+import java.util.Locale;
 import java.util.Set;
 
-public class SearchParametersModified {
-	public static final long serialVersionUID = 12L;
+class SearchParametersModified {
 
-    private String userId;
     private String groupId;
     private String woeId;
     private String media;
@@ -28,50 +27,25 @@ public class SearchParametersModified {
     private Date maxUploadDate;
     private Date minTakenDate;
     private Date maxTakenDate;
-    private Date interestingnessDate;
     private String license;
     private Set<String> extras;
     private String[] bbox;
-    private String placeId;
     private int accuracy = 0;
     private String safeSearch;
-    private String[] machineTags;
-    private String machineTagMode;
     private String latitude;
     private String longitude;
     private double radius = -1;
     private String radiusUnits;
     private boolean hasGeo = false;
+    private String userId;
 
-    public static final ThreadLocal<DateFormat> DATE_FORMATS = new ThreadLocal<DateFormat>() {
+    private static final ThreadLocal<DateFormat> MYSQL_DATE_FORMATS = new ThreadLocal<DateFormat>() {
         protected synchronized DateFormat initialValue() {
-            return new SimpleDateFormat("yyyy-MM-dd");
+            return new SimpleDateFormat("yyyy-MM-dd HH:mm:ss", Locale.US);
         }
     };
 
-    public static final ThreadLocal<DateFormat> MYSQL_DATE_FORMATS = new ThreadLocal<DateFormat>() {
-        protected synchronized DateFormat initialValue() {
-            return new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-        }
-    };
-
-    /** order argument */
-    public static int DATE_POSTED_DESC = 0;
-    /** order argument */
-    public static int DATE_POSTED_ASC = 1;
-    /** order argument */
-    public static int DATE_TAKEN_DESC = 2;
-    /** order argument */
-    public static int DATE_TAKEN_ASC = 3;
-    /** order argument */
-    public static int INTERESTINGNESS_DESC = 4;
-    /** order argument */
-    public static int INTERESTINGNESS_ASC = 5;
-    /** order argument */
-    public static int RELEVANCE = 6;
-    private int sort = 0;
-
-    public SearchParametersModified() {
+    SearchParametersModified() {
 
     }
 
@@ -86,26 +60,12 @@ public class SearchParametersModified {
      * @see com.googlecode.flickrjandroid.Flickr#ACCURACY_CITY
      * @see com.googlecode.flickrjandroid.Flickr#ACCURACY_STREET
      */
-    public void setAccuracy(int accuracy) {
+    void setAccuracy(int accuracy) {
         this.accuracy = accuracy;
     }
 
-    public int getAccuracy() {
-        return accuracy;
-    }
-
-    public String getGroupId() {
+    private String getGroupId() {
         return groupId;
-    }
-
-    /**
-     * The id of a group who's pool to search. If specified, only matching
-     * photos posted to the group's pool will be returned.
-     *
-     * @param groupId
-     */
-    public void setGroupId(String groupId) {
-        this.groupId = groupId;
     }
 
     /**
@@ -121,118 +81,55 @@ public class SearchParametersModified {
      * added in the last 12 hours
      * (though flickr may extend the limit in the future).
      *
-     * @param hasGeo
+     * @param hasGeo has geo coordinates
      */
-    public void setHasGeo(boolean hasGeo) {
+    void setHasGeo(boolean hasGeo) {
         this.hasGeo = hasGeo;
     }
 
-    public boolean getHasGeo() {
+    private boolean getHasGeo() {
         return hasGeo;
     }
 
-    public String[] getTags() {
+    private String[] getTags() {
         return tags;
     }
 
-    public void setTags(String[] tags) {
-        this.tags = tags;
-    }
-
-    public String getTagMode() {
+    private String getTagMode() {
         return tagMode;
     }
 
-    public void setTagMode(String tagMode) {
-        this.tagMode = tagMode;
-    }
-
-    public String getText() {
+    String getText() {
         return text;
     }
 
-    public void setText(String text) {
+    void setText(String text) {
         this.text = text;
     }
 
-    public Date getMinUploadDate() {
+    private Date getMinUploadDate() {
         return minUploadDate;
     }
 
-    public void setMinUploadDate(Date minUploadDate) {
-        this.minUploadDate = minUploadDate;
-    }
-
-    public Date getMaxUploadDate() {
+    private Date getMaxUploadDate() {
         return maxUploadDate;
     }
 
-    public void setMaxUploadDate(Date maxUploadDate) {
-        this.maxUploadDate = maxUploadDate;
-    }
-
-    public Date getMinTakenDate() {
+    private Date getMinTakenDate() {
         return minTakenDate;
     }
 
-    public void setMinTakenDate(Date minTakenDate) {
-        this.minTakenDate = minTakenDate;
-    }
-
-    public Date getMaxTakenDate() {
+    private Date getMaxTakenDate() {
         return maxTakenDate;
     }
 
-    public void setMaxTakenDate(Date maxTakenDate) {
-        this.maxTakenDate = maxTakenDate;
-    }
-
-    public String getLicense() {
+    String getLicense() {
         return license;
     }
 
-    public void setLicense(String license) {
+    void setLicense(String license) {
         this.license = license;
     }
-
-    public Date getInterestingnessDate() {
-        return interestingnessDate;
-    }
-
-    /**
-     * Set the date, for which interesting Photos to request.
-     * 
-     * @param intrestingnessDate
-     */
-    public void setInterestingnessDate(Date intrestingnessDate) {
-        this.interestingnessDate = intrestingnessDate;
-    }
-
-    /**
-     * Set the machine tags, for which Photos to request.
-     * 
-     * @param tags
-     */
-    public void setMachineTags(String[] tags) {
-        this.machineTags = tags;
-    }
-
-    public String[] getMachineTags() {
-        return machineTags;
-    }
-    /**
-     * Set the machine tags search mode to use when requesting photos
-     * 
-     * @param tagMode
-     */
-    public void setMachineTagMode(String tagMode) {
-        this.machineTagMode = tagMode;
-    }
-
-    public String getMachineTagMode() {
-        return machineTagMode;
-    }
-
     /**
      * List of extra information to fetch for each returned
      * record. Currently supported fields are:
@@ -245,152 +142,23 @@ public class SearchParametersModified {
      * @see com.googlecode.flickrjandroid.photos.Extras#ALL_EXTRAS
      * @see com.googlecode.flickrjandroid.photos.Extras#MIN_EXTRAS
      */
-    public void setExtras(Set<String> extras) {
+    void setExtras(Set<String> extras) {
         this.extras = extras;
     }
 
-    /**
-     * 4 values defining the Bounding Box of the area that 
-     * will be searched.<p>
-     * The 4 values represent the bottom-left corner of the box
-     * and the top-right corner, minimum_longitude, minimum_latitude,
-     * maximum_longitude, maximum_latitude.<p>
-     *
-     * Longitude has a range of -180 to 180,
-     * latitude of -90 to 90. Defaults to -180,
-     * -90, 180, 90 if not specified.<p>
-     *
-     * Unlike standard photo queries, geo (or bounding box)
-     * queries will only return 250 results per page.<p>
-     *
-     * Geo queries require some sort of limiting agent in
-     * order to prevent the database from crying.
-     * This is basically like the check against "parameterless searches"
-     * for queries without a geo component.<p>
-     *
-     * A tag, for instance, is considered a limiting agent as are
-     * user defined min_date_taken and min_date_upload parameters.
-     * If no limiting factor is passed flickr returns only photos
-     * added in the last 12 hours (though flickr may extend the
-     * limit in the future).
-     *
-     * @param minimum_longitude
-     * @param minimum_latitude
-     * @param maximum_longitude
-     * @param maximum_latitude
-     */
-    public void setBBox(
-        String minimum_longitude,
-        String minimum_latitude,
-        String maximum_longitude,
-        String maximum_latitude
-    ) {
-        this.bbox = new String[] {
-            minimum_longitude,
-            minimum_latitude,
-            maximum_longitude,
-            maximum_latitude
-        };
-    }
-
-    public String[] getBBox() {
+    private String[] getBBox() {
         return bbox;
     }
 
-    /**
-     * Optional safe search setting.<br>
-     * Un-authed calls can only see Safe content.
-     *
-     * @param level 1, 2 or 3
-     * @see com.googlecode.flickrjandroid.Flickr#SAFETYLEVEL_SAFE
-     * @see com.googlecode.flickrjandroid.Flickr#SAFETYLEVEL_MODERATE
-     * @see com.googlecode.flickrjandroid.Flickr#SAFETYLEVEL_RESTRICTED
-     */
-    public void setSafeSearch(String level) {
-        this.safeSearch = level;
-    }
-
-    public String getSafeSearch() {
+    private String getSafeSearch() {
         return safeSearch;
     }
 
-    public int getSort() {
-        return sort;
-    }
-
-    /**
-     * Set the sort-order.<p>
-     * The default is <a href="#DATE_POSTED_DESC">DATE_POSTED_DESC</a>
-     *
-     * @see com.googlecode.flickrjandroid.photos.SearchParameters#DATE_POSTED_ASC
-     * @see com.googlecode.flickrjandroid.photos.SearchParameters#DATE_POSTED_DESC
-     * @see com.googlecode.flickrjandroid.photos.SearchParameters#DATE_TAKEN_ASC
-     * @see com.googlecode.flickrjandroid.photos.SearchParameters#DATE_TAKEN_DESC
-     * @see com.googlecode.flickrjandroid.photos.SearchParameters#INTERESTINGNESS_ASC
-     * @see com.googlecode.flickrjandroid.photos.SearchParameters#INTERESTINGNESS_DESC
-     * @see com.googlecode.flickrjandroid.photos.SearchParameters#RELEVANCE
-     * @param order
-     */
-    public void setSort(int order) {
-        this.sort = order;
-    }
-
-    /**
-     * @return A placeId
-     * @see com.googlecode.flickrjandroid.places.PlacesInterface#resolvePlaceId(String)
-     */
-    public String getPlaceId() {
-        return placeId;
-    }
-
-    /**
-     * PlaceId only used when bbox not set.
-     * 
-     * Geo queries require some sort of limiting agent in order to prevent
-     * the database from crying. This is basically like the check against
-     * "parameterless searches" for queries without a geo component.<p>
-     *
-     * A tag, for instance, is considered a limiting agent as are user defined
-     * min_date_taken and min_date_upload parameters &emdash; If no limiting
-     * factor is passed we return only photos added in the last 12 hours
-     * (though we may extend the limit in the future).
-     *
-     * @param placeId
-     * @see com.googlecode.flickrjandroid.places.PlacesInterface#resolvePlaceId(String)
-     * @see com.googlecode.flickrjandroid.places.Place#getPlaceId()
-     * @see com.googlecode.flickrjandroid.places.Location#getPlaceId()
-     */
-    public void setPlaceId(String placeId) {
-        this.placeId = placeId;
-    }
-
-    public String getWoeId() {
+    private String getWoeId() {
         return woeId;
     }
 
-    /**
-     * A Where on Earth identifier to use to filter photo clusters.<br>
-     * For example all the photos clustered by locality in the United States (WOE ID 23424977).<br>
-     * (not used if bbox argument is present).<p/>
-     *
-     * Geo queries require some sort of limiting agent in order to prevent
-     * the database from crying. This is basically like the check against
-     * "parameterless searches" for queries without a geo component.<p/>
-     *
-     * A tag, for instance, is considered a limiting agent as are user defined
-     * min_date_taken and min_date_upload parameters.  If no limiting
-     * factor is passed we return only photos added in the last 12 hours
-     * (though flickr may extend the limit in the future).<p/>
-     *
-     * @param woeId
-     * @see com.googlecode.flickrjandroid.places.Place#getWoeId()
-     * @see com.googlecode.flickrjandroid.places.Location#getWoeId()
-     */
-    public void setWoeId(String woeId) {
-        this.woeId = woeId;
-    }
-
-    public String getMedia() {
+    private String getMedia() {
         return media;
     }
 
@@ -398,9 +166,9 @@ public class SearchParametersModified {
      * Filter results by media type. Possible values are all (default),
      * photos or videos.
      *
-     * @param media
+     * @param media media type
      */
-    public void setMedia(String media) throws FlickrException {
+    void setMedia(String media) throws FlickrException {
         if (media.equals("all") ||
             media.equals("photos") ||
             media.equals("videos")
@@ -411,26 +179,12 @@ public class SearchParametersModified {
         }
     }
 
-    public String getContacts() {
+    private String getContacts() {
         return contacts;
     }
 
-    /**
-     * Search your contacts. Valid arguments are either 'all' or 'ff'
-     * for just friends and family.<p/>
-     *
-     * It requires that the "user_id" field also be set and allows you to limit
-     * queries to only photos belonging to that user's photos. As in : All my
-     * contacts photos tagged "aaron". (Experimental)
-     *
-     * @param contacts
-     */
-    public void setContacts(String contacts) {
-        this.contacts = contacts;
-    }
-
-    public Collection<Parameter> getAsParameters() {
-        List<Parameter> parameters = new ArrayList<Parameter>();
+    Collection<Parameter> getAsParameters() {
+        List<Parameter> parameters = new ArrayList<>();
 
         String lat = getLatitude();
         if (lat != null) {
@@ -442,109 +196,104 @@ public class SearchParametersModified {
             parameters.add(new Parameter("lon", lon));
         }
 
-        double radius = getRadius();
+        radius = getRadius();
         if (radius > 0) {
             parameters.add(new Parameter("radius", radius));
         }
 
-        String radiusUnits = getRadiusUnits();
+        radiusUnits = getRadiusUnits();
         if (radiusUnits != null) {
             parameters.add(new Parameter("radius_units", radiusUnits));
         }
 
-        String media = getMedia();
+        media = getMedia();
         if (media != null) {
             parameters.add(new Parameter("media", media));
         }
 
-        String userId = getUserId();
+        userId = getUserId();
         if (userId != null) {
             parameters.add(new Parameter("user_id", userId));
-            String contacts = getContacts();
+            contacts = getContacts();
             if (contacts != null) {
                 parameters.add(new Parameter("contacts", contacts));
             }
         }
 
-        String groupId = getGroupId();
+        groupId = getGroupId();
         if (groupId != null) {
             parameters.add(new Parameter("group_id", groupId));
         }
 
-        String[] tags = getTags();
+        tags = getTags();
         if (tags != null) {
             parameters.add(new Parameter("tags", StringUtilities.join(tags, ",")));
         }
 
-        String tagMode = getTagMode();
+        tagMode = getTagMode();
         if (tagMode != null) {
             parameters.add(new Parameter("tag_mode", tagMode));
         }
 
-        String[] mtags = getMachineTags();
-        if (mtags != null) {
-        	parameters.add(new Parameter("machine_tags", StringUtilities.join(mtags, ",")));
+        String[] mTags = tags;
+        if (mTags != null) {
+        	parameters.add(new Parameter("machine_tags", StringUtilities.join(mTags, ",")));
         }
 
-        String mtagMode = getMachineTagMode();
-        if (mtagMode != null) {
-            parameters.add(new Parameter("machine_tag_mode", mtagMode));
+        String mTagMode = tagMode;
+        if (mTagMode != null) {
+            parameters.add(new Parameter("machine_tag_mode", mTagMode));
         }
 
-        String text = getText();
+        text = getText();
         if (text != null) {
             parameters.add(new Parameter("text", text));
         }
 
-        Date minUploadDate = getMinUploadDate();
+        minUploadDate = getMinUploadDate();
         if (minUploadDate != null) {
-            parameters.add(new Parameter("min_upload_date", new Long(minUploadDate.getTime() / 1000L)));
+            parameters.add(new Parameter("min_upload_date", Long.valueOf(minUploadDate.getTime() / 1000L)));
         }
 
-        Date maxUploadDate = getMaxUploadDate();
+        maxUploadDate = getMaxUploadDate();
         if (maxUploadDate != null) {
-            parameters.add(new Parameter("max_upload_date", new Long(maxUploadDate.getTime() / 1000L)));
+            parameters.add(new Parameter("max_upload_date", Long.valueOf(maxUploadDate.getTime() / 1000L)));
         }
 
-        Date minTakenDate = getMinTakenDate();
+        minTakenDate = getMinTakenDate();
         if (minTakenDate != null) {
-            parameters.add(new Parameter("min_taken_date", ((DateFormat)MYSQL_DATE_FORMATS.get()).format(minTakenDate)));
+            parameters.add(new Parameter("min_taken_date", MYSQL_DATE_FORMATS.get().format(minTakenDate)));
         }
 
-        Date maxTakenDate = getMaxTakenDate();
+        maxTakenDate = getMaxTakenDate();
         if (maxTakenDate != null) {
-            parameters.add(new Parameter("max_taken_date", ((DateFormat)MYSQL_DATE_FORMATS.get()).format(maxTakenDate)));
+            parameters.add(new Parameter("max_taken_date", MYSQL_DATE_FORMATS.get().format(maxTakenDate)));
         }
 
-        String license = getLicense();
+        license = getLicense();
         if (license != null) {
             parameters.add(new Parameter("license", license));
         }
 
-        Date intrestingnessDate = getInterestingnessDate();
-        if (intrestingnessDate != null) {
-            parameters.add(new Parameter("date", ((DateFormat)DATE_FORMATS.get()).format(intrestingnessDate)));
-        }
-
-        String[] bbox = getBBox();
+        bbox = getBBox();
         if (bbox != null) {
             parameters.add(new Parameter("bbox", StringUtilities.join(bbox, ",")));
             if (accuracy > 0) {
                 parameters.add(new Parameter("accuracy", accuracy));
             }
         } else {
-            String woeId = getWoeId();
+            woeId = getWoeId();
             if (woeId != null) {
                 parameters.add(new Parameter("woe_id", woeId));
             }
         }
 
-        String safeSearch = getSafeSearch();
+        safeSearch = getSafeSearch();
         if (safeSearch != null) {
             parameters.add(new Parameter("safe_search", safeSearch));
         }
 
-        boolean hasGeo = getHasGeo();
+        hasGeo = getHasGeo();
         if (hasGeo) {
             parameters.add(new Parameter("has_geo", "true"));
         }
@@ -553,58 +302,38 @@ public class SearchParametersModified {
             parameters.add(new Parameter("extras", StringUtilities.join(extras, ",")));
         }
 
-        if (sort != DATE_POSTED_DESC) {
-            String sortArg = null;
-            if(sort == DATE_POSTED_ASC) sortArg = "date-posted-asc";
-            if(sort == DATE_TAKEN_DESC) sortArg = "date-taken-desc";
-            if(sort == DATE_TAKEN_ASC) sortArg = "date-taken-asc";
-            if(sort == INTERESTINGNESS_DESC) sortArg = "interestingness-desc";
-            if(sort == INTERESTINGNESS_ASC) sortArg = "interestingness-asc";
-            if(sort == RELEVANCE) sortArg = "relevance";
-            if(sortArg != null) parameters.add(new Parameter("sort", sortArg));
-        }
-
         return parameters;
     }
 
-    public void setLatitude(String lat) {
+    void setLatitude(String lat) {
         latitude = lat;
     }
 
-    public void setRadius(double r) {
+    void setRadius(double r) {
         radius = r;
     }
 
-    public void setLongitude(String lon) {
+    void setLongitude(String lon) {
         longitude = lon;
     }
 
-    public void setRadiusUnits(String units) {
-        radiusUnits = units;
-    }
-
-    public String getLatitude() {
+    private String getLatitude() {
         return latitude;
     }
 
-    public String getLongitude() {
+    private String getLongitude() {
         return longitude;
     }
 
-    public double getRadius() {
+    private double getRadius() {
         return radius;
     }
 
-    public String getRadiusUnits() {
+    private String getRadiusUnits() {
         return radiusUnits;
     }
 
-    public String getUserId() {
+    private String getUserId() {
         return userId;
     }
-
-    public void setUserId(String userId) {
-        this.userId = userId;
-    }
-
 }
